[package]
name = "blog_os"
version = "0.1.0"
authors = ["Howard Zhu <zhc_howard@hotmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 60          # (in seconds)

[dependencies]
bootloader = "0.9"
volatile = "0.2"
spin = "0.5"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
